updated the purposeofhearinga and awardstatement to nullable true